<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="ca.uqac.diaryfit.ui.tabs.MainFragment"
        android:label="@string/title_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="ca.uqac.diaryfit.ui.calendar.CalendarGestion"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navigation_tools"
        android:name="ca.uqac.diaryfit.ui.tabs.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools"/>

    <fragment
        android:id="@+id/navigation_stats"
        android:name="ca.uqac.diaryfit.ui.tabs.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_measures"
        android:name="ca.uqac.diaryfit.ui.tabs.MeasuresFragment"
        android:label="@string/title_measures"
        tools:layout="@layout/fragment_measures" />
</navigation>