<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:minWidth="@dimen/min_width_dialog"
    app:layout_anchorGravity="start">

    <EditText
        android:id="@+id/newexercice_et_name"
        style="@style/DialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_normal_margin"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:layout_marginEnd="@dimen/activity_normal_margin"
        android:autofillHints=""
        android:ems="10"
        android:focusable="auto"
        android:inputType="text"
        android:text="@string/default_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/newexercice_ll_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/newexercice_et_name"
        app:layout_constraintStart_toStartOf="@+id/newexercice_et_name"
        app:layout_constraintTop_toBottomOf="@+id/newexercice_et_name">

        <View
            android:id="@+id/newexercice_div_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/newexercice_tv_1"
            style="@style/TextCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_small_margin"
            android:text="@string/type_of_exercice" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/newexercice_rb_dist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <RadioButton
                android:id="@+id/newexercice_rb_rep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repetition" />

            <RadioButton
                android:id="@+id/newexercice_rb_tm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newexercice_ll_tool"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/newexercice_ll_type"
        app:layout_constraintStart_toStartOf="@+id/newexercice_ll_type"
        app:layout_constraintTop_toBottomOf="@+id/newexercice_ll_type">

        <View
            android:id="@+id/newexercice_div_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/newexercice_tv_2"
            style="@style/TextCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_small_margin"
            android:text="@string/add_tool" />

        <Switch
            android:id="@+id/newexercice_sw_tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/default_text" />
    </LinearLayout>

    <Button
        android:id="@+id/newexercice_bt_ok"
        style="@style/DialogAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:text="@string/ok"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newexercice_ll_tool" />

    <Button
        android:id="@+id/newexercice_bt_cancel"
        style="@style/DialogAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:text="@string/cancel"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/newexercice_bt_ok"
        app:layout_constraintEnd_toStartOf="@+id/newexercice_bt_ok"
        app:layout_constraintTop_toBottomOf="@+id/newexercice_ll_tool" />

</androidx.constraintlayout.widget.ConstraintLayout>