<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="@dimen/min_width_dialog"
    app:layout_anchorGravity="start">

    <TextView
        android:id="@+id/addsession_tv_1"
        style="@style/DialogTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_normal_margin"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:layout_marginEnd="@dimen/activity_normal_margin"
        android:text="@string/add_session"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/addsession_sp_template"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:contentDescription="@string/select_template"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/addsession_tv_1"
        app:layout_constraintStart_toStartOf="@+id/addsession_tv_1"
        app:layout_constraintTop_toBottomOf="@+id/addsession_tv_1" />

    <EditText
        android:id="@+id/addsession_et_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/default_text"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColorHint="#A1887F"
        app:layout_constraintEnd_toEndOf="@+id/addsession_sp_template"
        app:layout_constraintStart_toStartOf="@+id/addsession_sp_template"
        app:layout_constraintTop_toBottomOf="@+id/addsession_sp_template"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/addsession_bt_ok"
        style="@style/DialogAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:text="@string/ok"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addsession_et_date" />

    <Button
        android:id="@+id/addsession_bt_cancel"
        style="@style/DialogAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:text="@string/cancel"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/addsession_bt_ok"
        app:layout_constraintEnd_toStartOf="@+id/addsession_bt_ok"
        app:layout_constraintTop_toBottomOf="@+id/addsession_et_date" />

</androidx.constraintlayout.widget.ConstraintLayout>