<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dialogs.tabs.ExerciceRepeatFragment">

    <TextView
        android:id="@+id/exrepeat_tv_serie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:text="@string/series"
        app:layout_constraintStart_toStartOf="@+id/exrepeat_et_serie"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exrepeat_et_serie"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_normal_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:layout_marginEnd="@dimen/activity_small_margin"
        app:layout_constraintEnd_toStartOf="@+id/exrepeat_et_repetition"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exrepeat_tv_serie" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginBottom="@dimen/activity_small_margin"
        android:text="@string/repetition"
        app:layout_constraintBottom_toTopOf="@+id/exrepeat_et_repetition"
        app:layout_constraintStart_toStartOf="@+id/exrepeat_et_repetition" />

    <TextView
        android:id="@+id/exrepeat_et_repetition"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_normal_margin"
        app:layout_constraintBottom_toBottomOf="@+id/exrepeat_et_serie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toEndOf="@+id/exrepeat_et_serie"
        app:layout_constraintTop_toTopOf="@+id/exrepeat_et_serie" />

    <TextView
        android:id="@+id/exrepeat_tv_weigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="@+id/exrepeat_et_weight"
        app:layout_constraintTop_toBottomOf="@+id/exrepeat_et_serie" />

    <TextView
        android:id="@+id/exrepeat_et_weight"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_normal_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:layout_marginEnd="@dimen/activity_normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exrepeat_tv_weigth" />

    <TextView
        android:id="@+id/exrepeat_tv_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:text="@string/rest_time"
        app:layout_constraintStart_toStartOf="@+id/exrepeat_et_rest"
        app:layout_constraintTop_toBottomOf="@+id/exrepeat_et_weight" />

    <TextView
        android:id="@+id/exrepeat_et_rest"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_normal_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:layout_marginEnd="@dimen/activity_normal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exrepeat_tv_rest" />

</androidx.constraintlayout.widget.ConstraintLayout>