<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.dialogs.tabs.ExerciceTimeFragment">


    <TextView
        android:id="@+id/extime_tv_serie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:text="@string/series"
        app:layout_constraintStart_toStartOf="@+id/extime_et_serie"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/extime_et_serie"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:layout_marginEnd="@dimen/activity_small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extime_tv_serie" />

    <TextView
        android:id="@+id/extime_tv_weigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="15dp"
        android:text="@string/weight"
        app:layout_constraintStart_toStartOf="@+id/extime_et_weight"
        app:layout_constraintTop_toBottomOf="@+id/extime_et_serie" />

    <TextView
        android:id="@+id/extime_et_weight"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:layout_marginEnd="@dimen/activity_small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extime_tv_weigth" />

    <TextView
        android:id="@+id/extime_tv_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_normal_margin"
        android:text="@string/work_time"
        app:layout_constraintStart_toStartOf="@+id/extime_et_work"
        app:layout_constraintTop_toBottomOf="@+id/extime_et_weight" />

    <TextView
        android:id="@+id/extime_et_work"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:layout_marginEnd="@dimen/activity_small_margin"
        app:layout_constraintEnd_toStartOf="@+id/extime_et_rest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extime_tv_work" />

    <TextView
        android:id="@+id/extime_tv_rest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:text="@string/rest_time"
        app:layout_constraintStart_toStartOf="@+id/extime_et_rest"
        app:layout_constraintTop_toTopOf="@+id/extime_tv_work" />

    <TextView
        android:id="@+id/extime_et_rest"
        style="@style/NumberPickerEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/extime_et_work"
        app:layout_constraintTop_toTopOf="@+id/extime_et_work" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="@+id/extime_et_serie"
        app:layout_constraintStart_toStartOf="@+id/extime_et_serie"
        app:layout_constraintTop_toBottomOf="@+id/extime_et_serie" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="@+id/extime_et_weight"
        app:layout_constraintStart_toStartOf="@+id/extime_et_weight"
        app:layout_constraintTop_toBottomOf="@+id/extime_et_weight" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/activity_small_margin"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="@+id/extime_et_work"
        app:layout_constraintStart_toStartOf="@+id/extime_et_work"
        app:layout_constraintTop_toBottomOf="@+id/extime_et_work" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="@+id/extime_et_rest"
        app:layout_constraintStart_toStartOf="@+id/extime_et_rest"
        app:layout_constraintTop_toBottomOf="@+id/extime_et_rest" />

</androidx.constraintlayout.widget.ConstraintLayout>
